# cls

./: .gitignore  Cargo.toml  README.md  build-all.sh
src/: component.rs  config.rs  constant.rs  global_input.rs  handler.rs  listener.rs  main.rs  renderer.rs  socket.rs  state.rs  util.rs
src/component/: block.rs  layer.rs  popup.rs
src/component/block/: dialogs.rs  files.rs  help.rs  info.rs  log.rs  playing.rs  results.rs  search.rs  settings.rs  tabs.rs  volume.rs  waves.rs
src/component/popup/: confirm.rs  delete_tab.rs  dialog.rs  help.rs  input.rs  key_bind.rs  quit.rs  save.rs  wave.rs
src/config/: migrate.rs
src/config/migrate/: migrate0.rs  migrate1.rs
src/handler/: block.rs  input.rs  layer.rs  navigate.rs  popup.rs  pulseaudio.rs
src/handler/block/: files.rs  tabs.rs  volume.rs
src/socket/: code.rs
src/util/: audio.rs  dialog.rs  file.rs  fs.rs  global_input.rs  pulseaudio.rs  tab.rs  threads.rs  wave.rs  waveform.rs
