[package]
name = "cls"
version = "2.0.1"
edition = "2021"

[dependencies]
crossterm = "0.28"
ratatui = "0.29.0"
tui-input = "*"
serde = { version = "1.0.210", features = ["derive"] }
normpath = "1.3.0"
ffprobe = "0.4.0"
substring = "1.4.5"
mki = "0.2.3"
uuid = { version = "1.10.0", features = ["v4"] }
signal-hook = "0.3.17"
nix = { version = "0.29.0", features = ["signal"] }
file-format = "0.25.0"
event-listener = "5.3.1"
splitty = "1.0.2"
clap = { version = "4.5.20", features = ["cargo"] }
rand = "0.8.5"
dirs = "5.0.1"
config = { version = "0.15.4", default-features = false, features = ["json", "toml"] }
serde_json = "1.0.134"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.5"
regex = "1.11.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true  
