[package]
name = "cls"
version = "2.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["cargo"] }
config = { version = "0.15.19", default-features = false, features = ["json", "toml"] }
crossterm = "0.28"
dirs = "5.0.1"
event-listener = "5.3.1"
ffprobe = "0.4.0"
file-format = "0.25.0"
interprocess = "2.2.3"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.5"
mime_guess = "2.0.5"
mki = "0.2.3"
nix = { version = "0.29.0", features = ["signal"] }
normpath = "1.3.0"
rand = "0.8.5"
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.134"
signal-hook = "0.3.17"
splitty = "1.0.2"
substring = "1.4.5"
tui-input = "*"
uuid = { version = "1.10.0", features = ["v4"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true  
