[package]
name = "cls"
version = "3.1.3"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
clap = { version = "4.5.20", features = ["cargo"] }
cmd-exists = "0.1.2"
config = { version = "0.15.19", default-features = false, features = ["json", "toml"] }
cpal = "0.17.3"
crossterm = "0.29.0"
ctrlc = "3.5.2"
dirs = "5.0.1"
event-listener = "5.3.1"
ffprobe = "0.4.0"
file-format = "0.25.0"
interprocess = "2.2.3"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.5"
mime_guess = "2.0.5"
mki = "0.2.3"
normpath = "1.3.0"
rand = "0.8.5"
ratatui = "0.30.0"
regex = "1.11.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.134"
substring = "1.4.5"
symphonium = { version = "0.7.1", features = ["all"] }
tui-input = "0.15.0"
uuid = { version = "1.10.0", features = ["v4"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true  
